계층형 게시판 기능 추가

--- a/myapp/.settings/org.eclipse.core.resources.prefs
+++ b/myapp/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,18 @@
 eclipse.preferences.version=1
 encoding//WebContent/ch09/script.js=EUC-KR
 encoding//WebContent/ch09/style.css=UTF-8
+encoding//WebContent/ch14/idCheck.jsp=UTF-8
+encoding//WebContent/ch14/login.jsp=UTF-8
+encoding//WebContent/ch14/loginProc.jsp=UTF-8
+encoding//WebContent/ch14/logout.jsp=UTF-8
+encoding//WebContent/ch14/member.jsp=UTF-8
+encoding//WebContent/ch14/memberProc.jsp=UTF-8
+encoding//WebContent/ch14/script.js=UTF-8
+encoding//WebContent/ch14/selfInfo.jsp=UTF-8
+encoding//WebContent/ch14/style.css=EUC-KR
+encoding//WebContent/ch14/zipSearch.jsp=UTF-8
+encoding//src/ch14/DBConnectionMgr.java=EUC-KR
+encoding//src/ch14/MemberBean.java=EUC-KR
+encoding//src/ch14/MemberMgr.java=EUC-KR
+encoding//src/ch14/ZipcodeBean.java=EUC-KR
+encoding//src/ch15_1/BoardMgr.java=EUC-KR
