투표 프로그램

--- a/myapp/.settings/org.eclipse.core.resources.prefs
+++ b/myapp/.settings/org.eclipse.core.resources.prefs
@@ -16,3 +16,6 @@ encoding//src/ch14/MemberBean.java=EUC-KR
 encoding//src/ch14/MemberMgr.java=EUC-KR
 encoding//src/ch14/ZipcodeBean.java=EUC-KR
 encoding//src/ch15_1/BoardMgr.java=EUC-KR
+encoding//src/ch16/DBConnectionMgr.java=EUC-KR
+encoding//src/ch16/PollListBean.java=EUC-KR
+encoding//src/ch16/PollMgr.java=EUC-KR
