--- a/myapp/.settings/org.eclipse.core.resources.prefs
+++ b/myapp/.settings/org.eclipse.core.resources.prefs
@@ -11,11 +11,13 @@ encoding//WebContent/ch14/script.js=UTF-8
 encoding//WebContent/ch14/selfInfo.jsp=UTF-8
 encoding//WebContent/ch14/style.css=EUC-KR
 encoding//WebContent/ch14/zipSearch.jsp=UTF-8
+encoding//WebContent/ch17/style.css=EUC-KR
 encoding//src/ch14/DBConnectionMgr.java=EUC-KR
 encoding//src/ch14/MemberBean.java=EUC-KR
 encoding//src/ch14/MemberMgr.java=EUC-KR
 encoding//src/ch14/ZipcodeBean.java=EUC-KR
-encoding//src/ch15_1/BoardMgr.java=EUC-KR
+encoding//src/ch15_1/BoardMgr.java=UTF-8
 encoding//src/ch16/DBConnectionMgr.java=EUC-KR
 encoding//src/ch16/PollListBean.java=EUC-KR
 encoding//src/ch16/PollMgr.java=EUC-KR
+encoding/<project>=EUC-KR
